<resources>
    <string name="app_name">WhatsApp</string>
    <string name="myStatus">My Status </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tapToAdd">Tap to add status update</string>
    <string name="recentUpdates">Recent updates</string>
    <string name="photos">Photos</string>
    <string name="Video">Videos</string>
    <string name="typeAStatus">Type a Status</string>
    <string name="newGroup">New Group</string>
    <string name="newContact">New Contact</string>
    <string name="selectContact">Select Contact</string>
    <string name="Audios">Audio</string>
    <string name="typeMessage">Type a message</string>
    <string name="addParticipants">Add Participants</string>
    <string name="contactOnWhatsapp">Contacts on WhatsApp</string>
    <string name="title_activity_search_fragment">SearchFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>