<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whatsApp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/white_back_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/selectContact"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/search" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/more" />

    </LinearLayout>

        <RelativeLayout
            android:id="@+id/ContainerContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loutNewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="10dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/chat_bubble_back">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/new_group" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/newGroup"
                android:textColor="@color/black"
                android:textSize="17sp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/loutAddContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="10dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/chat_bubble_back">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/add_friend" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/newContact"
                android:textColor="@color/black"
                android:textSize="17sp" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/contactOnWhatsapp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvContactList"
        android:layout_marginVertical="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>