<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.StatusFragment">

    <LinearLayout
        android:id="@+id/loutAddStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgStatus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bill_gates" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/imgStatus"
                android:layout_marginTop="25dp"
                android:background="@drawable/add_status_back"
                android:padding="7dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/plus" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myStatus"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtLastChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tapToAdd"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/recentUpdates" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvStatusList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />


        <LinearLayout
            android:id="@+id/loutCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="320dp"
            android:background="@drawable/chat_bubble_back"
            android:elevation="10dp"
            android:padding="15dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loutPencil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loutCamera"
            android:layout_marginStart="320dp"
            android:background="@drawable/pencil_back"
            android:elevation="10dp"
            android:padding="15dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/pencil" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>